<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trip_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uncc.chatapplication.TripDetailsActivity">

    <TextView
        android:id="@+id/textViewTripNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewtripImageDetails"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_below="@+id/textViewTripNameDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewLocationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewtripImageDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="Location: "
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonCloseDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_label"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <Button
        android:id="@+id/buttonShowMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPlaces"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="110dp"
        android:text="@string/show_members_label"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:visibility="invisible"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textViewCreatedByDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLocationDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="Created By: "
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/places_label"
        android:textColor="?android:attr/colorActivatedHighlight" />
</RelativeLayout>
